<resources>
    <!--Welcome page-->
    <string name="app_name">Master_Mechanic_App</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="welcome_back_topic">Welcome Back</string>
    <string name="Login_to_your_acc">Login to your account</string>
    <string name="Uname">User Name</string>
    <string name="pw">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="acc_msg">Don\'t have an account</string>

    <!--Break Down-->
    <string name="B_down">Break Down</string>
    <string name="P_Details">Primary Details</string>
    <string name="V_number">Vehical No</string>
    <string name="O_name">Owner Name</string>
    <string name="C_name">Contact No</string>
    <string name="V_type">Vehicle Type</string>
    <string name="location">Location</string>
    <string name="N_carrier">Need a Carrier</string>
    <string name="T_movable">Tick Vehicle Is Not Movable</string>
    <string name="S_notes">Special Notes</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="vehicle">Vehicle</string>
    <string name="repair">Repair</string>
    <string name="shop">Shop</string>
    <string name="vehical_No">KQ-6789</string>
    <string name="owner_name">Downey Jr</string>>
    <string name="tele_no">07********</string>>
    <string name="address">Address</string>>
    <string-array name="BreakDownPage_VehicalType">
        <item>Car</item>
        <item>Van</item>
        <item>Bus</item>
        <item>Jeep</item>
        <item>Lorry</item>
    </string-array>

    <!--Item Details-->
    <string name="Available">Available</string>
    <string name="Description">Description</string>

    <!--Add New Vehicle-->
    <string name="Add_N_Vehicle">Add New Vehicle</string>
    <string name="V_Details">Vehicle Details</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="E_cc">Engine CC</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>

    <string name="Ve_No">Vehicle No</string>
    <string name="Ve_type">Vehicle Type</string>>


    <string name="Hybrid">Hybrid</string>
    <string name="electric">Electric</string>
    <string name="add">Add</string>

    <!--Admin page-->
    <string name="hi">Hi Admin</string>


    <!--Welcome logo-->
    <string name="W_logo">welcome logo</string>


    <!--check up page -->
    <string name="CheckUp_header">Check Up</string>
    <string name="DateTime">Date and Time</string>
    <string name="email">Email</string>>
    <string name="Pricing_txt">Pricing</string>
    <string name="amount_txt">Amount</string>
    <string name="Checkup_bottom_msg">Please note that this price only for the checkUP (Additional Services will cost additionally)</string>
    <string name="date">Date</string>>
    <string name="time">Time</string>>
    <string name="cancel_btn">CANCEL</string>


    <string name="send_btn">SEND</string>


    <!-- Edit Profile -->
    <string name="edit_profile_text">Edit Profile</string>
    <string name="personal_text">Personal Details</string>
    <string name="vehicle_details_text">Vehicle Details</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="Nname">Name</string>>
    <string name="remove_btn">REMOVE</string>
    <string name="edit_btn">EDIT</string>

    <!-- fuel pass -->
    <string name="fuelpass_topic_txt">Fuel Pass</string>
    <string name="add_fuel_pss_txt">Add New Fule Pass QR</string>
    <string name="my_qr_txt">My QR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Home Page -->
    <string-array name="vehicleselector">
        <item>KQ 6199</item>
        <item>CAB 7868</item>
        <item>CAF 7898</item>
        <item>HG 7823</item>
    </string-array>
    <string name="hi_txt">Hi, </string>
    <string name="name">Downey Jr</string>
    <string name="description">Description</string>

    <string name="breakeTxt">

    Even if Vehicle new\n
    does it look like a\n
    old one ?
    </string>
    <string name="custome_txt">Set a Custome Service</string>


    <!-- vehicle regi  -->
    <string name="vehiregidetails">Vehicle Registration Details</string>
    <string name="oname">Owner Name</string>
    <string name="regis">Register</string>
    <string name="Createuracc">Create new Account</string>
    <string name="Alreadyhaveannacc">All ready have an Account ?</string>
    <string name="ComfirmPw">Confirm Password</string>
    <string name="sakura">Sakura</string>


</resources>