<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="413dp"
        android:layout_height="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/old_wizard_with_spell_book_cartoon_style_dark_cave_background_1308_44346" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Createuracc"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="271dp" />

    <EditText
        android:id="@+id/loginUserNameBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="@drawable/custome_input"
        android:drawableStart="@drawable/custome_user_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Uname"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="350dp" />

    <EditText
        android:id="@+id/loginPwBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="@drawable/custome_input"
        android:drawableStart="@drawable/custome_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteY="493dp" />

    <EditText
        android:id="@+id/registeremailBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="@drawable/custome_input"
        android:drawableStart="@drawable/custome_user_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Uname"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="417dp" />


</androidx.constraintlayout.widget.ConstraintLayout>